--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   }
   
   .grid-item {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0);
     border: 1px solid rgba(0, 0, 0, 0.698);
     padding: 20px;
     font-size: 30px;
